# mcp-eth-uniswap-v3

./: .env  Cargo.toml  README.md
src/: eth_client.rs  lib.rs  main.rs  mcp_server.rs  uniswap_v3.rs
src/abi/: erc20.json  uniswap_v3_pool.json  uniswap_v3_router.json
tests/: integration_test.rs
