[package]
name = "mcp-eth-uniswap-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
rust_decimal = { version = "1.30", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
